# thrawn-nnue

./: .gitignore  README.md  pyproject.toml
configs/: default.toml  test80_a768_v10.toml  test80_a768_v11.toml  test80_a768_v12.toml  test80_a768_v3.toml  test80_a768_v4.toml  test80_a768_v5.toml  test80_a768_v6.toml  test80_a768_v7_fast.toml  test80_a768_v8.toml  test80_a768_v9.toml  v1.toml  v2.toml
docs/: engine_integration.md  nnue_format.md  nnue_spec.md  simd_optimization.md  testing.md  trainer_workflow.md
native_binpack/: CMakeLists.txt
native_binpack/src/: binpack_bridge.cpp
src/thrawn_nnue/: accumulator.py  board.py  calibration.py  checkpoint.py  cli.py  config.py  console.py  export.py  features.py  metrics.py  model.py  native.py  training.py
tests/: test_accumulator.py  test_calibration.py  test_checkpoint_metadata.py  test_cli.py  test_export_format.py  test_features.py  test_inspect_analysis.py  test_metrics_reporting.py  test_native.py  test_training_validation.py  test_validation_config.py
