[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thrawn-nnue"
version = "0.1.0"
description = "Dual-perspective NNUE training scaffold for chess engines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
]

[project.scripts]
thrawn-nnue = "thrawn_nnue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
